--- a/documentation/Quickstart.ipynb
+++ b/documentation/Quickstart.ipynb
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,231 @@
     "    model.train()\n",
     "    for batch, (X, y) in enumerate(dataloader):\n",
     "        X, y = X.to(device), y.to(device)\n",
-    "        "
+    "\n",
+    "        # Compute prediction error\n",
+    "        pred = model(X)\n",
+    "        loss = loss_fn(pred, y)\n",
+    "\n",
+    "        # Backpropagation\n",
+    "        loss.backward()\n",
+    "        optimizer.step()\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        if batch % 100 == 0:\n",
+    "            loss, current = loss.item(), (batch + 1) * len(X)\n",
+    "            print(f\"loss: {loss:>7f} [{current:>5d}/{size:>5d}]\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We also check the model’s performance against the test dataset to ensure it is learning."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def test(dataloader, model, loss_fn):\n",
+    "    size = len(dataloader.dataset)\n",
+    "    num_batches = len(dataloader)\n",
+    "    model.eval()\n",
+    "    test_loss, correct = 0, 0\n",
+    "    with torch.no_grad():\n",
+    "        for X, y in dataloader:\n",
+    "            X, y = X.to(device), y.to(device)\n",
+    "            pred = model(X)\n",
+    "            test_loss += loss_fn(pred, y).item()\n",
+    "            correct += (pred.argmax(1) == y).type(torch.float).sum().item()\n",
+    "    test_loss /= num_batches\n",
+    "    correct /= size\n",
+    "    print(f\"Test Error: \\n Accuracy: {(100*correct):>0.1f}%, Avg loss: {test_loss:>8f}\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training process is conducted over several iterations (epochs). During each epoch, the model learns parameters to make better predictions. We print the model’s accuracy and loss at each epoch; we’d like to see the accuracy increase and the loss decrease with every epoch."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n",
+      "---------------------\n",
+      "loss: 2.302744 [   64/60000]\n",
+      "loss: 2.289266 [ 6464/60000]\n",
+      "loss: 2.270466 [12864/60000]\n",
+      "loss: 2.265372 [19264/60000]\n",
+      "loss: 2.247409 [25664/60000]\n",
+      "loss: 2.218995 [32064/60000]\n",
+      "loss: 2.220565 [38464/60000]\n",
+      "loss: 2.188062 [44864/60000]\n",
+      "loss: 2.184079 [51264/60000]\n",
+      "loss: 2.153449 [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 49.4%, Avg loss: 2.147635\n",
+      "\n",
+      "Epoch 2\n",
+      "---------------------\n",
+      "loss: 2.156551 [   64/60000]\n",
+      "loss: 2.149096 [ 6464/60000]\n",
+      "loss: 2.085204 [12864/60000]\n",
+      "loss: 2.107234 [19264/60000]\n",
+      "loss: 2.055099 [25664/60000]\n",
+      "loss: 1.989631 [32064/60000]\n",
+      "loss: 2.021662 [38464/60000]\n",
+      "loss: 1.939726 [44864/60000]\n",
+      "loss: 1.940524 [51264/60000]\n",
+      "loss: 1.873535 [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 56.4%, Avg loss: 1.870587\n",
+      "\n",
+      "Epoch 3\n",
+      "---------------------\n",
+      "loss: 1.900229 [   64/60000]\n",
+      "loss: 1.876268 [ 6464/60000]\n",
+      "loss: 1.747079 [12864/60000]\n",
+      "loss: 1.801633 [19264/60000]\n",
+      "loss: 1.683774 [25664/60000]\n",
+      "loss: 1.630561 [32064/60000]\n",
+      "loss: 1.664098 [38464/60000]\n",
+      "loss: 1.560164 [44864/60000]\n",
+      "loss: 1.578899 [51264/60000]\n",
+      "loss: 1.483086 [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 61.8%, Avg loss: 1.499445\n",
+      "\n",
+      "Epoch 4\n",
+      "---------------------\n",
+      "loss: 1.559709 [   64/60000]\n",
+      "loss: 1.533760 [ 6464/60000]\n",
+      "loss: 1.372276 [12864/60000]\n",
+      "loss: 1.459390 [19264/60000]\n",
+      "loss: 1.337700 [25664/60000]\n",
+      "loss: 1.326424 [32064/60000]\n",
+      "loss: 1.353234 [38464/60000]\n",
+      "loss: 1.274700 [44864/60000]\n",
+      "loss: 1.305567 [51264/60000]\n",
+      "loss: 1.217704 [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 64.3%, Avg loss: 1.240546\n",
+      "\n",
+      "Epoch 5\n",
+      "---------------------\n",
+      "loss: 1.309099 [   64/60000]\n",
+      "loss: 1.299965 [ 6464/60000]\n",
+      "loss: 1.124008 [12864/60000]\n",
+      "loss: 1.243041 [19264/60000]\n",
+      "loss: 1.119381 [25664/60000]\n",
+      "loss: 1.133725 [32064/60000]\n",
+      "loss: 1.166755 [38464/60000]\n",
+      "loss: 1.101243 [44864/60000]\n",
+      "loss: 1.137305 [51264/60000]\n",
+      "loss: 1.066482 [57664/60000]\n",
+      "Test Error: \n",
+      " Accuracy: 65.3%, Avg loss: 1.082358\n",
+      "\n",
+      "Done!\n"
+     ]
+    }
+   ],
+   "source": [
+    "epochs = 5\n",
+    "for t in range(epochs):\n",
+    "    print(f\"Epoch {t+1}\\n---------------------\")\n",
+    "    train(train_dataloader, model, loss_fn, optimizer)\n",
+    "    test(test_dataloader, model, loss_fn)\n",
+    "print(\"Done!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Saving models\n",
+    "A common way to save a model is to serialize the internal state dictionary (containing the model parameters)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.save(model.state_dict(), \"model.pth\")\n",
+    "print(\"Saved Pytroch Model State to model.pth\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Loading Models\n",
+    "The process for loading a model includes re-creating the model structure and loading the state dictionary into it."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = NeuralNetwork().to(device)\n",
+    "model.load_state_dict(torch.load(\"model.pth\", weights_only=True))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This model can now be used to make predictions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Predicted: \"Ankle boot\", Actual: \"Ankle boot\"\n"
+     ]
+    }
+   ],
+   "source": [
+    "classes = [\n",
+    "    \"T-shirt/top\",\n",
+    "    \"Trouser\",\n",
+    "    \"Pullover\",\n",
+    "    \"Dress\",\n",
+    "    \"Coat\",\n",
+    "    \"Sandal\",\n",
+    "    \"Shirt\",\n",
+    "    \"Sneaker\",\n",
+    "    \"Bag\",\n",
+    "    \"Ankle boot\",\n",
+    "]\n",
+    "\n",
+    "model.eval()\n",
+    "x, y = test_data[0][0], test_data[0][1]\n",
+    "with torch.no_grad():\n",
+    "    x = x.to(device)\n",
+    "    pred = model(x)\n",
+    "    predicted, actual = classes[pred[0].argmax(0)], classes[y]\n",
+    "    print(f'Predicted: \"{predicted}\", Actual: \"{actual}\"')"
    ]
   }
  ],
