finished quickstart tutorial

--- a/documentation/Quickstart_exercises.ipynb
+++ b/documentation/Quickstart_exercises.ipynb
@@ -322,8 +322,7 @@
     "### Model Definition\n",
     "\n",
     "2.1 Modify the model to include an additional hidden layer with 128 neurons and a ReLU activation function. <br>\n",
-    "2.2 Replace the ReLU activation function with another, such as LeakyReLU or Tanh. Compare the results. <br>\n",
-    "2.3 Implement a model using a convolutional architecture (CNN) instead of a fully connected network. Use at least two convolutional layers followed by pooling layers. <br>"
+    "2.2 Replace the ReLU activation function with another, such as LeakyReLU or Tanh. Compare the results. <br>\n"
    ]
   },
   {
@@ -571,53 +570,273 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Treinamento do Modelo  \n",
     "\n",
-    "\n",
-    "Treinamento do Modelo  \n",
-    "\n",
-    "3.1 Altere o número de épocas para 10 e observe como isso afeta a precisão do modelo.<br>\n",
-    "3.2 Adicione um mecanismo de parada antecipada (early stopping) que interrompe o treinamento se a perda de validação não melhorar por 3 épocas consecutivas. <br>\n",
-    "3.3 Experimente diferentes funções de perda, como nn.CrossEntropyLoss e nn.NLLLoss. Explique as diferenças entre elas e como elas afetam o treinamento. <br>\n",
-    "3.4 Implemente um otimizador diferente, como Adam (torch.optim.Adam), e compare seu desempenho com o SGD. <br>\n",
-    "\n",
-    "Avaliação do Modelo  \n",
-    "\n",
-    "4.1 Calcule outras métricas de avaliação, como recall, precisão e F1-score, para avaliar o desempenho do modelo. <br>\n",
-    "4.2 Plote a matriz de confusão para visualizar os erros do modelo. <br>\n",
-    "4.3 Salve o modelo treinado usando torch.save e carregue-o novamente usando torch.load. <br>\n",
-    "4.4 Teste o modelo carregado em novos dados. <br>\n",
-    "\n",
-    "Experimentação e Análise  \n",
-    "\n",
-    "5.1 Realize experimentos com diferentes taxas de aprendizado (learning rate). Qual é a taxa ideal para o problema? <br>\n",
-    "5.2 Aplique regularização L2 (weight decay) ao otimizador e observe como isso afeta o desempenho do modelo. <br>\n",
-    "5.3 Use dropout (nn.Dropout) no modelo para reduzir o overfitting. Teste diferentes valores de probabilidade de dropout (ex.: 0.2, 0.5). <br>\n",
-    "5.4 Experimente diferentes inicializações de pesos para as camadas do modelo (ex.: torch.nn.init.xavier_uniform_). <br>"
+    "3.1 Altere o número de épocas para 10 e observe como isso afeta a precisão do modelo.<br>"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n",
+      "---------------------\n",
+      "loss: 1.647398 [   64/50000]\n",
+      "loss: 1.615947 [ 6464/50000]\n",
+      "loss: 1.396326 [12864/50000]\n",
+      "loss: 1.739592 [19264/50000]\n",
+      "loss: 1.665690 [25664/50000]\n",
+      "loss: 1.739096 [32064/50000]\n",
+      "loss: 1.758780 [38464/50000]\n",
+      "loss: 1.610207 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 41.9%, Avg loss: 1.651479\n",
+      "\n",
+      "Epoch 2\n",
+      "---------------------\n",
+      "loss: 1.632709 [   64/50000]\n",
+      "loss: 1.600811 [ 6464/50000]\n",
+      "loss: 1.381337 [12864/50000]\n",
+      "loss: 1.730325 [19264/50000]\n",
+      "loss: 1.653200 [25664/50000]\n",
+      "loss: 1.728236 [32064/50000]\n",
+      "loss: 1.743729 [38464/50000]\n",
+      "loss: 1.599721 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 42.4%, Avg loss: 1.641216\n",
+      "\n",
+      "Epoch 3\n",
+      "---------------------\n",
+      "loss: 1.619340 [   64/50000]\n",
+      "loss: 1.587145 [ 6464/50000]\n",
+      "loss: 1.367351 [12864/50000]\n",
+      "loss: 1.721909 [19264/50000]\n",
+      "loss: 1.641701 [25664/50000]\n",
+      "loss: 1.718011 [32064/50000]\n",
+      "loss: 1.729756 [38464/50000]\n",
+      "loss: 1.589820 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 42.8%, Avg loss: 1.631541\n",
+      "\n",
+      "Epoch 4\n",
+      "---------------------\n",
+      "loss: 1.607414 [   64/50000]\n",
+      "loss: 1.574512 [ 6464/50000]\n",
+      "loss: 1.354375 [12864/50000]\n",
+      "loss: 1.714715 [19264/50000]\n",
+      "loss: 1.631187 [25664/50000]\n",
+      "loss: 1.708362 [32064/50000]\n",
+      "loss: 1.716428 [38464/50000]\n",
+      "loss: 1.580433 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 43.2%, Avg loss: 1.622388\n",
+      "\n",
+      "Epoch 5\n",
+      "---------------------\n",
+      "loss: 1.596566 [   64/50000]\n",
+      "loss: 1.563142 [ 6464/50000]\n",
+      "loss: 1.342079 [12864/50000]\n",
+      "loss: 1.708578 [19264/50000]\n",
+      "loss: 1.621436 [25664/50000]\n",
+      "loss: 1.699237 [32064/50000]\n",
+      "loss: 1.703897 [38464/50000]\n",
+      "loss: 1.571771 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 43.4%, Avg loss: 1.613702\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
-    "Desafio Final  \n",
-    "\n",
-    "Combine tudo o que aprendeu para resolver um problema mais complexo. \n",
-    "\n",
-    "1.1 Escolha um novo conjunto de dados (por exemplo, MNIST, CIFAR-10 ou qualquer outro disponível no torchvision.datasets). <br>\n",
-    "1.2 Projete e implemente um modelo CNN personalizado para classificar as imagens desse conjunto de dados. <br>\n",
-    "1.3 Treine o modelo, ajuste os hiperparâmetros e avalie seu desempenho. <br>\n",
-    "1.4 Documente suas descobertas e explique quais decisões de design contribuíram para o sucesso do modelo. <br>\n",
-    "     "
+    "epoch = 10\n",
+    "# comparing how different epoch sizes affect the model\n",
+    "# plain\n",
+    "for t in range(epochs):\n",
+    "    print(f\"Epoch {t+1}\\n---------------------\")\n",
+    "    train(train_dataloader_64, model, loss_fn, optimizer)\n",
+    "    test(test_dataloader_64, model, loss_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n",
+      "---------------------\n",
+      "loss: 1.586795 [   64/50000]\n",
+      "loss: 1.552444 [ 6464/50000]\n",
+      "loss: 1.330564 [12864/50000]\n",
+      "loss: 1.703293 [19264/50000]\n",
+      "loss: 1.612178 [25664/50000]\n",
+      "loss: 1.690472 [32064/50000]\n",
+      "loss: 1.691673 [38464/50000]\n",
+      "loss: 1.563648 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 43.8%, Avg loss: 1.605417\n",
+      "\n",
+      "Epoch 2\n",
+      "---------------------\n",
+      "loss: 1.577868 [   64/50000]\n",
+      "loss: 1.542256 [ 6464/50000]\n",
+      "loss: 1.319618 [12864/50000]\n",
+      "loss: 1.698557 [19264/50000]\n",
+      "loss: 1.603293 [25664/50000]\n",
+      "loss: 1.681903 [32064/50000]\n",
+      "loss: 1.679796 [38464/50000]\n",
+      "loss: 1.555648 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 44.2%, Avg loss: 1.597474\n",
+      "\n",
+      "Epoch 3\n",
+      "---------------------\n",
+      "loss: 1.569596 [   64/50000]\n",
+      "loss: 1.532812 [ 6464/50000]\n",
+      "loss: 1.309147 [12864/50000]\n",
+      "loss: 1.694107 [19264/50000]\n",
+      "loss: 1.594513 [25664/50000]\n",
+      "loss: 1.673611 [32064/50000]\n",
+      "loss: 1.668659 [38464/50000]\n",
+      "loss: 1.548197 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 44.5%, Avg loss: 1.589854\n",
+      "\n",
+      "Epoch 4\n",
+      "---------------------\n",
+      "loss: 1.561926 [   64/50000]\n",
+      "loss: 1.523921 [ 6464/50000]\n",
+      "loss: 1.298966 [12864/50000]\n",
+      "loss: 1.689852 [19264/50000]\n",
+      "loss: 1.585836 [25664/50000]\n",
+      "loss: 1.665459 [32064/50000]\n",
+      "loss: 1.657967 [38464/50000]\n",
+      "loss: 1.541156 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 44.7%, Avg loss: 1.582528\n",
+      "\n",
+      "Epoch 5\n",
+      "---------------------\n",
+      "loss: 1.554765 [   64/50000]\n",
+      "loss: 1.515565 [ 6464/50000]\n",
+      "loss: 1.289213 [12864/50000]\n",
+      "loss: 1.685578 [19264/50000]\n",
+      "loss: 1.577296 [25664/50000]\n",
+      "loss: 1.657739 [32064/50000]\n",
+      "loss: 1.647847 [38464/50000]\n",
+      "loss: 1.534332 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 45.0%, Avg loss: 1.575459\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "epoch = 20\n",
+    "# comparing how different epoch sizes affect the model\n",
+    "# plain\n",
+    "for t in range(epochs):\n",
+    "    print(f\"Epoch {t+1}\\n---------------------\")\n",
+    "    train(train_dataloader_64, model, loss_fn, optimizer)\n",
+    "    test(test_dataloader_64, model, loss_fn)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1\n",
+      "---------------------\n",
+      "loss: 1.547964 [   64/50000]\n",
+      "loss: 1.507553 [ 6464/50000]\n",
+      "loss: 1.280073 [12864/50000]\n",
+      "loss: 1.681130 [19264/50000]\n",
+      "loss: 1.569011 [25664/50000]\n",
+      "loss: 1.650088 [32064/50000]\n",
+      "loss: 1.638507 [38464/50000]\n",
+      "loss: 1.527525 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 45.2%, Avg loss: 1.568628\n",
+      "\n",
+      "Epoch 2\n",
+      "---------------------\n",
+      "loss: 1.541721 [   64/50000]\n",
+      "loss: 1.499857 [ 6464/50000]\n",
+      "loss: 1.271465 [12864/50000]\n",
+      "loss: 1.676697 [19264/50000]\n",
+      "loss: 1.560723 [25664/50000]\n",
+      "loss: 1.642680 [32064/50000]\n",
+      "loss: 1.629897 [38464/50000]\n",
+      "loss: 1.520763 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 45.4%, Avg loss: 1.562034\n",
+      "\n",
+      "Epoch 3\n",
+      "---------------------\n",
+      "loss: 1.535698 [   64/50000]\n",
+      "loss: 1.492443 [ 6464/50000]\n",
+      "loss: 1.263055 [12864/50000]\n",
+      "loss: 1.672385 [19264/50000]\n",
+      "loss: 1.552816 [25664/50000]\n",
+      "loss: 1.635186 [32064/50000]\n",
+      "loss: 1.621818 [38464/50000]\n",
+      "loss: 1.514438 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 45.5%, Avg loss: 1.555633\n",
+      "\n",
+      "Epoch 4\n",
+      "---------------------\n",
+      "loss: 1.530040 [   64/50000]\n",
+      "loss: 1.485128 [ 6464/50000]\n",
+      "loss: 1.255033 [12864/50000]\n",
+      "loss: 1.667930 [19264/50000]\n",
+      "loss: 1.545193 [25664/50000]\n",
+      "loss: 1.627842 [32064/50000]\n",
+      "loss: 1.614162 [38464/50000]\n",
+      "loss: 1.508431 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 45.8%, Avg loss: 1.549395\n",
+      "\n",
+      "Epoch 5\n",
+      "---------------------\n",
+      "loss: 1.524474 [   64/50000]\n",
+      "loss: 1.477935 [ 6464/50000]\n",
+      "loss: 1.247428 [12864/50000]\n",
+      "loss: 1.663319 [19264/50000]\n",
+      "loss: 1.537906 [25664/50000]\n",
+      "loss: 1.620587 [32064/50000]\n",
+      "loss: 1.606906 [38464/50000]\n",
+      "loss: 1.502654 [44864/50000]\n",
+      "Test Error: \n",
+      " Accuracy: 46.0%, Avg loss: 1.543370\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "epoch = 50\n",
+    "# comparing how different epoch sizes affect the model\n",
+    "# plain\n",
+    "for t in range(epochs):\n",
+    "    print(f\"Epoch {t+1}\\n---------------------\")\n",
+    "    train(train_dataloader_64, model, loss_fn, optimizer)\n",
+    "    test(test_dataloader_64, model, loss_fn)"
    ]
   }
  ],
